--- a/public/assets/login.html
+++ b/public/assets/login.html
@@ -14,18 +14,18 @@
         <div class="row">
             <div class="col-sm-5 intro-section">
                 <div class="brand-wrapper">
-                    <h2>BookToShare</h2>
+                    <img class="logologin" src="./images/logo.png"><h2 class="logotext">BookToShare</h2>
                 </div>
                 <div class="intro-content-wrapper">
                     <h1 class="intro-title">Welcome to our website!</h1>
                     <p class="intro-text">Do you want to sell a book you've already read? Or buy books that other users are selling? You came to the right place!</p>
                 </div>
-                <div class="intro-section-footer">
+                <!-- <div class="intro-section-footer">
                     <p>Copyright 2020 BookToShare</p>
-                </div>
+                </div> -->
             </div>
             <div class="col-sm-7 form-section">
-                <p class="login-wrapper-signup-text">Need an account? <a href="#!">Signup here</a></p>
+                <p class="login-wrapper-signup-text">New to this website? <a href="#!">Signup here</a></p>
         <div class="login-wrapper">
             <h2 class="login-title">Sign in</h2>
             <form action="#!">
@@ -37,10 +37,6 @@
                 <label for="password" class="sr-only">Password</label>
                 <input type="password" name="password" id="password" class="form-control" placeholder="Password">
               </div>
-              <div class="custom-control custom-checkbox login-check-box">
-                <input type="checkbox" class="custom-control-input" id="customCheck1">
-                <label class="custom-control-label" for="customCheck1">Remember Me</label>
-              </div> 
               <div class="d-flex justify-content-between align-items-center mb-5">
                 <input name="login" id="login" class="btn login-btn" type="button" value="Login">
               </div>
