--- a/public/assets/login.html
+++ b/public/assets/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookToShare</title>
+    <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Muli&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -25,7 +26,7 @@
                 </div> -->
             </div>
             <div class="col-sm-7 form-section">
-                <p class="login-wrapper-signup-text">New to this website? <a href="#!">Signup here</a></p>
+                <p class="login-wrapper-signup-text">New to this website? <a href="signup.html">Signup here</a></p>
         <div class="login-wrapper">
             <h2 class="login-title">Sign in</h2>
             <form action="#!">
