create searchlibrary, script and modal

--- a/public/assets/mywork/assets/index2.html
+++ b/public/assets/mywork/assets/index2.html
@@ -15,15 +15,15 @@
             <div id="centeralign">
                 <h1>Welcome </h1>
 
-                <button type="button add-button" id="button1">Add Book</button>
-                <button type="button search-button" id="button2">Search Library</button>
+                <button type="button add-button" id="button1"><a href="addbook.html" alt='addbook'></a>Add Book</button>
+                <button type="button search-button" id="button2"><a href="search.html" alt='searchlibrary'></a>Search Library</button>
 
             </div>
         </div>
     </div>
 
 
-
 </body>
+<script src="script.js"></script>
 
 </html>
