--- a/public/assets/login.html
+++ b/public/assets/login.html
@@ -29,17 +29,18 @@
                 <p class="login-wrapper-signup-text">New to this website? <a href="signup.html">Signup here</a></p>
         <div class="login-wrapper">
             <h2 class="login-title">Sign in</h2>
-            <form action="#!">
+            <form class="login">
               <div class="form-group">
                 <label for="username" class="sr-only">Username</label>
-                <input type="text" name="username" id="username" class="form-control" placeholder="Username">
+                <input type="username" name="username" id="username" class="form-control" placeholder="Username">
               </div>
               <div class="form-group mb-3">
                 <label for="password" class="sr-only">Password</label>
                 <input type="password" name="password" id="password" class="form-control" placeholder="Password">
               </div>
               <div class="d-flex justify-content-between align-items-center mb-5">
-                <input name="login" id="login" class="btn login-btn" type="button" value="Login">
+                <!-- <input name="login" id="login" class="btn login-btn" type="submit" value="Login"> -->
+                <button type="submit" class="btn btn-default">Login</button>
               </div>
             </form>
             </div>
@@ -47,10 +48,11 @@
         </div>
     </div>
 
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/login.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    
 </body>
 </html>
