--- a/public/assets/signup.html
+++ b/public/assets/signup.html
@@ -14,31 +14,36 @@
     <div class="contentholder">
         <div class="signup-wrapper">
             <h2 class="login-title">Sign up</h2>
-            <form action="#!">
+            <form class="signup">
                 <div class="form-group">
                     <label for="firstname" class="sr-only"></label>
-                    <input type="text" name="firstname" id="firstname" class="form-control" placeholder="First Name">
+                    <input type="firstname" name="firstname" id="firstname" class="form-control" placeholder="First Name">
                   </div>
                   <div class="form-group">
                     <label for="lastname" class="sr-only"></label>
-                    <input type="text" name="lastname" id="lastname" class="form-control" placeholder="Last Name">
+                    <input type="lastname" name="lastname" id="lastname" class="form-control" placeholder="Last Name">
                   </div>
               <div class="form-group">
                 <label for="username" class="sr-only"></label>
-                <input type="text" name="username" id="username" class="form-control" placeholder="Username">
+                <input type="username" name="username" id="username" class="form-control" placeholder="Username">
               </div>
               <div class="form-group mb-3">
                 <label for="password" class="sr-only"></label>
                 <input type="password" name="password" id="password" class="form-control" placeholder="Password">
               </div>
+              <div style="display: none" id="alert" class="alert alert-danger" role="alert">
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                <span class="sr-only">Error:</span> <span class="msg"></span>
+              </div>
               <div class="d-flex justify-content-between align-items-center mb-5">
-                <input name="signup" id="signup" class="btn signup-btn" type="button" value="Sign Up">
+                <!-- <input name="signup" id="signup" class="btn signup-btn" type="submit" value="Sign Up"> -->
+                <button type="submit" class="btn btn-default">Sign Up</button>
               </div>
             </form>
         </div>
     </div>
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/signup.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
