--- a/public/assets/members.html
+++ b/public/assets/members.html
@@ -3,29 +3,33 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>Welcome</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
+  <link href="./css/style.css" rel="stylesheet">
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
-    </div>
-  </div>
-</nav>
+<!--   
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome <span class="member-name"></span></h2>
+        <h3>Welcome <span class="member-name"></span></h3>
       </div>
     </div>
+  </div> -->
+
+  
+  
+  <div class="imageandwelcome">
+    <img src="./images/undraw_book_lover_mkck.png" style="width:350px; height: 300px;" class="girlreading">
+    <h3>Welcome <span class="member-name"></span></h3>
+  </div>
+  <div class="choices">
+    <h5>Would you like to add a book to sell or search through our library of books?</h5>
+    <input name="addbook" id="addbook" class="btn add-btn" value="Add a Book">
+    <input name="browsebook" id="browsebook" class="btn browsebook-btn"  value="Browse Library">
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
