--- a/public/login.html
+++ b/public/login.html
@@ -29,7 +29,7 @@
             </div> -->
         </div>
         <div class="col-sm-7 form-section">
-            <p class="login-wrapper-signup-text">New to this website? <a href="signup.html">Signup here</a></p>
+            <p class="login-wrapper-signup-text">New to this website? <a href="signup">Signup here</a></p>
             <div class="login-wrapper">
                 <h2 class="login-title">Sign in</h2>
                 <form class="login" method="post" action="/api/login">
