made some changes to website look

--- a/public/assets/members.html
+++ b/public/assets/members.html
@@ -1,9 +1,9 @@
-<!--Shirleys 3 page-->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <title>Welcome</title>
+  <title>BookToShare</title>
+  <link rel="shortcut icon" type="image/ico" href="./images/favicon.ico">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -11,19 +11,10 @@
 </head>
 
 <body>
-<!--   
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h3>Welcome <span class="member-name"></span></h3>
-      </div>
-    </div>
-  </div> -->
-
   
   <div class="membercontent">
   <div class="imageandwelcome">
-    <img src="./images/undraw_book_lover_mkck.png" style="width:350px; height: 300px;" class="girlreading">
+    <img src="./images/welcome.png" style="width:350px; height: 300px;" class="girlreading">
     <h3>Welcome <span class="member-name"></span>!</h3>
   </div>
   <div class="choices">
@@ -37,5 +28,4 @@
   <script type="text/javascript" src="js/members.js"></script>
 
 </body>
-
 </html>
