--- a/public/signup.html
+++ b/public/signup.html
@@ -36,8 +36,8 @@
                 <span class="sr-only">Error:</span> <span class="msg"></span>
               </div>
               <div class="d-flex justify-content-between align-items-center mb-5">
-                <!-- <input name="signup" id="signup" class="btn signup-btn" type="submit" value="Sign Up"> -->
-                <button type="submit" class="btn btn-default">Sign Up</button>
+                <input name="signup" id="signup" class="btn signup-btn" type="submit" value="Sign Up">
+                <!-- <button type="submit" class="btn btn-default">Sign Up</button> -->
               </div>
             </form>
         </div>
