--- a/public/assets/login.html
+++ b/public/assets/login.html
@@ -17,16 +17,13 @@
                 <div class="brand-wrapper">
                     <img class="logologin" src="./images/logo.png"><h2 class="logotext">BookToShare</h2>
                 </div>
+            </div>
+            <div class="col-sm-7 form-section">
+                <p class="login-wrapper-signup-text">New to this website? <a href="signup.html">Signup here</a></p>
                 <div class="intro-content-wrapper">
                     <h1 class="intro-title">Welcome to our website!</h1>
                     <p class="intro-text">Do you want to sell a book you've already read? Or buy books that other users are selling? You came to the right place!</p>
                 </div>
-                <!-- <div class="intro-section-footer">
-                    <p>Copyright 2020 BookToShare</p>
-                </div> -->
-            </div>
-            <div class="col-sm-7 form-section">
-                <p class="login-wrapper-signup-text">New to this website? <a href="signup.html">Signup here</a></p>
         <div class="login-wrapper">
             <h2 class="login-title">Sign in</h2>
             <form class="login">
@@ -39,8 +36,8 @@
                 <input type="password" name="password" id="password" class="form-control" placeholder="Password">
               </div>
               <div class="d-flex justify-content-between align-items-center mb-5">
-                <!-- <input name="login" id="login" class="btn login-btn" type="submit" value="Login"> -->
-                <button type="submit" class="btn btn-default">Login</button>
+                <input name="login" id="login" class="btn login-btn" type="submit" value="Login">
+                <!-- <button type="submit" class="btn btn-default">Login</button> -->
               </div>
             </form>
             </div>
