pushing all in branch

--- a/public/assets/apibooks.html
+++ b/public/assets/apibooks.html
@@ -12,15 +12,11 @@
 
 <body>
   
-  <div class="availablecontent">
-  <div class="imagebrowse">
-    <img src="./images/browse.png" style="width:350px; height: 300px;" class="girlreading">
+  <div class="apicontent">
+  <div class="imagesearch">
+    <img src="./images/search.png" style="width:350px; height: 300px;" class="girlreading">
   </div>
-  <div class="availablebooks">
-    <!--append all books in database here-->
-    
-  </div>
-  <h5 class="linktoapi">Didn't find the book you were looking for? We got you! <a href="#">Click me!</a></h5>
+  
 </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
