--- a/public/login.html
+++ b/public/login.html
@@ -32,7 +32,7 @@
             <p class="login-wrapper-signup-text">New to this website? <a href="signup">Signup here</a></p>
             <div class="login-wrapper">
                 <h2 class="login-title">Sign in</h2>
-                <form class="login" method="post" action="/api/login">
+                <form class="login">
                     <div class="form-group">
                         <label for="username" class="sr-only">Username</label>
                         <input type="username" name="username" id="username" class="form-control"
@@ -53,15 +53,14 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+<script src="assets/js/login.js" type="text/javascript"></script>
 
 </body>
 </html>
