fixed login page

--- a/public/assets/apibooks.html
+++ b/public/assets/apibooks.html
@@ -14,13 +14,22 @@
   
  <div class="apicontent">
   <div class="imagesearch">
-    <img src="./images/search.png" style="width:350px; height: 300px;" class="girlreading">
+    <img src="./images/searchapi.png" style="width:350px; height: 300px;" class="girlreading">
+  </div>
+
+  <div id="search">
+    <div class="input-field">
+            <input type="search" id="searchbar" class="form-control" placeholder="Search for Books" aria-describedby="button-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+    </div>
   </div>
   
 </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- <script type="text/javascript" src="js/members.js"></script> -->
+  <script type="text/javascript" src="js/apibooks.js"></script>
 
 </body>
 </html>
