--- a/public/assets/mywork/assets/index2.html
+++ b/public/assets/mywork/assets/index2.html
@@ -6,9 +6,7 @@
     <title>Welcome Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Muli&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css\style.css">
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 </head>
@@ -41,7 +39,13 @@
             <input id = "bookimage" type="image" image="url"> -->
 
             <button id="submit">Submit</button>
-            <span class="modalclose">X</span>
+
+            <div class="wrapper">
+                <div>
+                    <input id="modalClose" type="button" value="X">
+                </div>
+            </div>
+
 
         </div>
 
