--- a/public/login.html
+++ b/public/login.html
@@ -15,10 +15,10 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-5 intro-section">
-            <div class="brand-wrapper">
+            <!-- <div class="brand-wrapper">
                 <img class="logologin" src="assets/images/logo.png">
                 <h2 class="logotext">BookToShare</h2>
-            </div>
+            </div> -->
         </div>
         <div class="col-sm-7 form-section">
             <p class="login-wrapper-signup-text">New to this website? <a href="signup">Signup here</a></p>
