--- a/public/login.html
+++ b/public/login.html
@@ -22,6 +22,7 @@
         </div>
         <div class="col-sm-7 form-section">
             <p class="login-wrapper-signup-text">New to this website? <a href="signup">Signup here</a></p>
+            <p class="adminlogin">Are you an admin? <a href="signup">Click here</a></p>
             <div class="intro-content-wrapper">
                 <h1 class="intro-title">Welcome to our website!</h1>
                 <p class="intro-text">Do you want to sell a book you've already read? Or buy books that other users are
